# rules-go-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  nogo.json  repos.bzl  rulesgo-4036.patch
src/: wrap.bzl
src/code.internal/: BUILD.bazel
src/code.internal/repro/: BUILD.bazel  main.go
src/code.internal/repro/lib/: BUILD.bazel  lib.go  main.go
