load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

gazelle(name = "gazelle")

nogo(
    name = "default_nogo",
    config =  ":nogo.json",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis/passes/printf:go_default_library",
    ],
)
